# Contexto

./: .dockerignore  .env  Dockerfile  README.md  custom_types.py  data_loader.py  docker-compose.yaml  main.py  pyproject.toml  test.py  vector_db.py  vector_db2.py
